# breaksmith

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
breaksmith/: __init__.py  analysis.py  app.py  cli.py  click.py  generator.py  generator_shared.py  hiphop.py  models.py  presets.py  run.py  synth.py
breaksmith/exporters/: __init__.py  json_export.py  midi.py  strudel.py
breaksmith/gui/: __init__.py  jobs.py  waveform.py  window.py
docs/: ARCHITECTURE.md  CLI.md  GUI.md  MUSICAL_MODEL.md  OUTPUT_FORMATS.md  ROADMAP.md  TROUBLESHOOTING.md  baseline-architecture.md  source-activity-maps.md  timing-diagnostics.md
packaging/pyinstaller/: README.md  breaksmith-gui.spec
tests/: test_app_gui.py  test_generator.py
