[project]
name = "breaksmith"
version = "0.1.0"
description = "Audio-aware breakbeat and drum-and-bass groove generator with MIDI and Strudel export"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "librosa>=0.11,<0.12",
    "mido>=1.3,<2",
    "numpy>=2,<3",
    "soundfile>=0.13,<0.14",
]

[project.scripts]
breaksmith = "breaksmith.cli:main"

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "ruff>=0.12,<0.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["breaksmith"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
